# ai-image-creator

./: .env.example  .gitignore  CLAUDE.md  README.md  install.bat  pyproject.toml  start.bat  update.bat
ai_image_creator/: __init__.py  __main__.py  app_logger.py  cli.py  constants.py  models.py  runner.py  settings.py
ai_image_creator/processing/: __init__.py  image_output.py
ai_image_creator/providers/: base.py  gemini_provider.py  openai_provider.py  registry.py
claude-plans/: help-me-develop-a-clever-brook.md  we-currently-support-docs-models-open-ai-jazzy-zebra.md
docs/: CONFIG.md  ENV.md
docs/models/: GEMINI.md  OPEN_AI.md
examples/: gemini_reference_requests.json  gemini_requests.json  openai_reference_requests.json  requests.json
tests/integration/: test_batch_runner.py
tests/unit/: test_gemini_provider.py  test_image_output.py  test_models.py  test_openai_provider.py  test_registry.py
tools/: run_integration_tests.bat  run_tests.bat
