[project]
name = "ai-image-creator"
version = "0.1.0"
description = "Create images with AI providers from the command line (JSON batch or CLI args)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
    "pillow",
    "python-dotenv",
    "google-genai>=2.12.1",
]

[project.scripts]
ai-image-creator = "ai_image_creator.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_image_creator"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
